fix: remove horizontal scrollbar

--- a/src/pages/Auth/Auth.css
+++ b/src/pages/Auth/Auth.css
@@ -8,7 +8,7 @@
 
 .Auth__waves {
   position: absolute;
-  width: 100lvw;
+  width: 100%;
   bottom: 0;
   z-index: -1;
 }
